--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   dio: ^5.5.0+1
   path_provider: ^2.1.4
+  fluttertoast: ^8.2.6
 
 dev_dependencies:
   flutter_test:
